tests/negative/gold/import3_test.gold
tests/negative/import3_test.toit:3:24: error: Name clash with toplevel declaration 'foo'
import .import3_a show foo
                       ^~~
tests/negative/import3_test.toit:5:1: note: Toplevel declaration of 'foo'
foo:
^~~
Compilation failed.
